# Odroid_Adafruit_Sensor

./: CMakeLists.txt
cmake/: OdroidAdafruitSensorConfig.cmake.in  OdroidAdafruitSensorConfigVersion.cmake.in  OdroidGPIOConfig.cmake.in  OdroidGPIOConfigVersion.cmake.in  Setup.cmake  config.h.in
include/: Adafruit_Sensor.h
src/: Adafruit_Sensor.cpp
